<resources>
    <string name="app_name">PruebaNegocio</string>
    <string name="requests">Pedidos</string>
    <string name="new_product">Nuevo producto</string>
    <string name="amount_column">Cantidad</string>
    <string name="product_request_column">Pedido</string>
    <string name="price_column">Precio actual</string>
    <string name="place_column">Lugar</string>
    <string name="amount_edit_text">Cantidad</string>
    <string name="buy_place_autocomplete_text">Lugar de compra</string>
    <string name="search_mode">Modo Busqueda</string>
    <string name="code_column">Código</string>
    <string name="porcentage_column">Porcentaje</string>
    <string name="select_correct_product">El cambio de precio va a afectar a estos productos. Si buscaba un produto o unos productos en particular, dejelo/s marcado/s con la casilla de la derecha del nombre del producto y presione el boton \"Cambiar Seleccionados\"</string>
    <string name="change_selected_products">Cambiar Seleccionados</string>
    <string name="cancel">cancelar</string>
    <string name="add_new_product_button">Agregar producto</string>
    <string name="name_hint">Nombre de producto</string>
    <string name="price_hint">Precio</string>
    <string name="porcentage_hint">Porcentaje de ganancia</string>
    <string name="description_hint">Descripción del producto</string>
    <string name="binding_product_description">Elija el producto que se va a relacionar con el pedido</string>
    <string name="providor_search_hint">Buscar por proveedor</string>
    <string name="related_product">Producto relacionado</string>
    <string name="accept_update">¿Desea realizar los cambios al producto?</string>
    <string name="accept">Aceptar</string>
    <string name="delete_requests">Borrar tachados</string>
    <string-array name="buy_places">
        <item>General</item>
        <item>Dulcenter</item>
        <item>Brown</item>
        <item>Maxiconsumo</item>
        <item>Sourigues</item>
        <item>Carlos</item>
        <item>Disquil</item>
        <item>Lecheria</item>
        <item>Lecheria gordo</item>
        <item>Pepsico</item>
        <item>Quilmes</item>
    </string-array>
</resources>