<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/productNameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/priceET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/porcentageET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/porcentage_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/addProductBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_product_button" />
</LinearLayout>