<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:gravity="right"
        android:orientation="horizontal"
        android:padding="0dp">

        <SearchView
            android:id="@+id/searchBar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="15">

        </SearchView>

        <Button
            android:id="@+id/microButton"
            android:layout_width="62dp"
            android:layout_height="50dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:background="#6750A4"
            android:foreground="@drawable/baseline_keyboard_voice_24"
            android:foregroundGravity="center_vertical|center_horizontal"
            android:foregroundTint="#FFFFFF"
            android:hapticFeedbackEnabled="false"
            android:insetBottom="0dp"
            android:padding="0dp"
            android:paddingBottom="0dp"
            android:textAlignment="textStart"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/addProduct"
            android:layout_width="62dp"
            android:layout_height="50dp"
            android:layout_margin="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:background="#6750A4"
            android:foreground="@drawable/baseline_add_shopping_cart_24"
            android:foregroundGravity="center_vertical|center_horizontal"
            android:foregroundTint="#FFFFFF"
            android:insetBottom="0dp"
            android:padding="0dp"
            android:paddingBottom="0dp"
            app:cornerRadius="0dp" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:baselineAligned="false"
            android:clickable="false"
            android:clipToPadding="false"
            android:paddingTop="0dp">

            <TextView
                android:id="@+id/amountColumn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#6750A4"
                android:text="@string/code_column"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/nameColumn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#6750A4"
                android:text="@string/product_request_column"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/actualCostColumn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#6750A4"
                android:text="@string/price_column"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/porcentageColumn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#6750A4"
                android:text="@string/porcentage_column"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </TableRow>
    </TableLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:id="@+id/productsTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:paddingTop="0dp">

        </TableLayout>
    </ScrollView>

</LinearLayout>